1) Added lightbox2 js 2) Fixed broken styles in album/index 3) removed unnecessary  code in application.js

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,23 @@ h1, h2 {
 
 }
 
+.card-container {
+  flex-wrap: wrap;
+  position: relative;
+  display: flex;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+.card-item {
+  flex: 0 0 25%;
+  padding: 2px;
+}
+
 .albums {
 	margin-top: 40px;
 	margin-bottom: 40px;
@@ -215,6 +232,7 @@ text-align: center;
 .lightbox-close:hover{
 	cursor: pointer;
 }
+
 
 
 
